# re-utilities

./: Cargo.toml  README.md
.github/workflows/: clippy.yml
detours-macro/: Cargo.toml
detours-macro/src/: lib.rs
injector/: Cargo.toml
injector/src/: error.rs  lib.rs  spawn.rs
injector/src/implementation/: injector.rs  mod.rs  spawn.rs
src/: detour_binder.rs  hook_library.rs  lib.rs  module.rs  patcher.rs  util.rs
src/launcher/: injector.rs  mod.rs  spawn.rs
src/windows/: hook_library.rs  mod.rs  module.rs  patcher.rs  thread_suspender.rs
src/windows/launcher/: injector.rs  mod.rs  spawn.rs
utilities/: Cargo.toml
utilities/src/: error.rs  lib.rs  util.rs
utilities/src/windows/: detour_binder.rs  hook_library.rs  mod.rs  module.rs  patcher.rs  thread_suspender.rs
