[package]
edition = "2021"
name = "re-utilities"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
dunce = "1.0.2"
patternscan = "1.2.0"

glob = {version = "0.3.0", optional = true}
itertools = {version = "0.10.3", optional = true}
proc-macro2 = {version = "1.0.36", features = ["span-locations"], optional = true}
quote = {version = "1.0.16", optional = true}
syn = {version = "1.0.89", optional = true}

[features]
debug-console = []
type_language = ["glob", "itertools", "quote", "syn", "proc-macro2"]

[target.'cfg(windows)'.dependencies]
detour = {git = "https://github.com/lostinspiration/detour-rs.git"}
dll-syringe = "0.13.1"
game-scanner = "1.1.2"

[target.'cfg(windows)'.dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
]
version = "0.39.0"
