[package]
edition = "2021"
name = "re-utilities"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
dunce = "1.0.2"
patternscan = "1.2.0"

glob = { version = "0.3.0", optional = true }
itertools = { version = "0.10.3", optional = true }
proc-macro2 = { version = "1.0.36", features = [
  "span-locations",
], optional = true }
quote = { version = "1.0.16", optional = true }
syn = { version = "1.0.89", optional = true }

[features]
debug-console = []
type_language = ["glob", "itertools", "quote", "syn", "proc-macro2"]

[target.'cfg(windows)'.dependencies]
retour = { version = "=0.4.0-alpha.2", features = ["static-detour"] }
dll-syringe = "0.15"
game-scanner = { git = "https://github.com/Shays-Forks/game-scanner.git" }

[target.'cfg(windows)'.dependencies.windows]
features = [
  "alloc",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
]
version = "0.35.0"
