[package]
name = "re-utilities-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
steamlocate = "=2.0.0-beta.2"
dunce = "1.0"

anyhow = { workspace = true }

dll-syringe = { version = "0.15", optional = true }

[features]
# dll-syringe only works on nightly, so this crate will be useless without going to nightly
nightly = ["dep:dll-syringe"]

[target.'cfg(windows)'.dependencies.windows]
features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security"]
workspace = true
