[package]
name = "re-utilities-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
steamlocate = "=2.0.0-beta.2"
dunce = "1.0"

anyhow = { workspace = true }

[dependencies.windows]
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
]
workspace = true
